# Chimera.APE

./: .gitignore  CMakeLists.txt  Chimera-APE-alfa-DevLog.txt  README.md  prompt.md
docs/: DECISIONS.md  GEMMA4-EMBEDDINGS.md  GPU.md  RELEASE-v0.1.0-alpha.md  USAGE.md
organs/turbovec-server/: Cargo.toml  smoke.sh
organs/turbovec-server/cosmo/: README-cosmo.md  aarch64-unknown-linux-cosmo.json  build-ape.sh  gcc-linker-wrapper.bash  stubs.c  turbovec-server.com  turbovec-server.fat.com  x86_64-unknown-linux-cosmo.json
organs/turbovec-server/src/: main.rs
scripts/: acceptance.sh  dev-env.sh  gen-mm-corpus.py  package.sh  render-devlog.py
src/: chunk.cpp  chunk.h  extract.cpp  extract.h  hash.cpp  hash.h  http.cpp  http.h  ingest.cpp  main.cpp  manifest.cpp  manifest.h  organs.cpp  organs.h  pipeline.h  search.cpp  supervisor.cpp  supervisor.h  ttl.cpp  ttl.h  util.h  walk.cpp  walk.h
tests/: test_spine.cpp
toolchains/: cosmocc.cmake
