[package]
name = "turbovec-server"
version = "0.1.0"
edition = "2021"
description = "Loopback HTTP server over turbovec::IdMapIndex — the turbovec.ape organ of Chimera"
license = "MIT"

[dependencies]
turbovec = { path = "../../vendor/turbovec-cosmopolitan/turbovec" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true
